--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,6 +1,6 @@
 body {
-    font-family: 'Ysabeau Office', sans-serif;
-    font-size: 20px;
+    font-family: Roboto;
+    font-size: 18px;
 }
 
 a {
