--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Admin</title>
-    <th:block th:replace="layout-admin :: link-css"></th:block>
+    <th:block th:replace="~{layout-admin :: link-css}"></th:block>
 </head>
 <body id="page-top">
 <div id="wrapper">
-    <th:block th:replace="layout-admin :: header"></th:block>
+    <th:block th:replace="~{layout-admin :: header}"></th:block>
     <div id="content-wrapper">
         <div id="content">
-            <th:block th:replace="layout-admin :: nav"></th:block>
+            <th:block th:replace="~{layout-admin :: nav}"></th:block>
             <div class="container-fluid">
                 <div class="d-sm-flex align-items-center justify-content-between mb-4">
                     <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
@@ -168,7 +168,7 @@
                 </div>
             </div>
 
-            <th:block th:replace="layout-admin :: footer"></th:block>
+            <th:block th:replace="~{layout-admin :: footer}"></th:block>
         </div>
     </div>
 </div>
