--- a/src/main/resources/templates/admin/product/list-product.html
+++ b/src/main/resources/templates/admin/product/list-product.html
@@ -11,7 +11,7 @@
     <th:block th:replace="~{layout-admin :: header}"></th:block>
     <div id="content-wrapper">
         <div id="content">
-            <th:block th:replace="layout-admin :: nav"></th:block>
+            <th:block th:replace="~{layout-admin :: nav}"></th:block>
             <div class="container-fluid">
                 <div class="card shadow mb-4">
                     <div class="card-header py-3">
