--- a/src/main/resources/templates/paypal/pay-success.html
+++ b/src/main/resources/templates/paypal/pay-success.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Thanh toán thành công</title>
