--- a/src/main/resources/templates/cart/cart.html
+++ b/src/main/resources/templates/cart/cart.html
@@ -18,7 +18,7 @@
                         <span th:text="${totalQuantity}"></span>
                     </h3>
                     <div>
-                        <p class="mb-0"><span class="text-muted">Sort by:</span> <a href="#!" class="text-body">price <i
+                        <p class="mb-0"><span class="text-muted">Sort by:</span> <a href="#" class="text-body">price <i
                                 class="fas fa-angle-down mt-1"></i></a></p>
                     </div>
                 </div>
