--- a/src/main/resources/templates/product/list-search.html
+++ b/src/main/resources/templates/product/list-search.html
@@ -20,8 +20,8 @@
                             <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                                 <div class="bg-image hover-zoom ripple rounded ripple-surface">
                                     <img th:src="@{'https://phuc-public-image.s3.ap-southeast-2.amazonaws.com/' + ${product.mainImage}}"
-                                         class="w-100" />
-                                    <a href="#!">
+                                         class="w-100" th:alt="${product.productName}"/>
+                                    <a href="#">
                                         <div class="hover-overlay">
                                             <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
                                         </div>
