--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -93,7 +93,7 @@
             <div class="row d-flex justify-content-start">
                 <div class="col-md-12 col-lg-10">
                     <form th:action="@{'/product/' + ${product.productId}}" method="POST" th:object="${newComment}">
-                        <div class="card-footer py-3 border-0" style="background-color: #f8f9fa;">
+                        <div class="card-footer py-3 border-0">
                             <div class="d-flex flex-start w-100">
                                 <img class="rounded-circle shadow-1-strong me-3"
                                      src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(19).webp" alt="avatar" width="40"
