--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -75,28 +75,28 @@
         <div class="container justify-content-center justify-content-md-between">
             <!-- Left links -->
             <ul class="navbar-nav flex-row">
-                <li class="nav-item me-3 me-lg-0">
-                    <a class="nav-link btn shadow-0" th:href="@{/product}">
-                        <span>Sản phẩm</span>
-                    </a>
-                </li>
-                <li class="nav-item me-3 me-lg-0 d-none d-md-inline-block dropdown">
+                <li class="nav-item me-lg-0 d-none d-md-inline-block dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                        data-mdb-toggle="dropdown" aria-expanded="false">
-                        Loại sản phẩm
+                        Danh mục
                     </a>
 
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink" id="productDropdown">
                         <!-- Các loại sản phẩm -->
                     </ul>
                 </li>
-                <li class="nav-item me-3 me-lg-0 d-none d-md-inline-block">
+                <li class="nav-item me-lg-0 d-none d-md-inline-block">
+                    <a class="nav-link" th:href="@{/product}">
+                        <span>Sản phẩm</span>
+                    </a>
+                </li>
+                <li class="nav-item me-lg-0 d-none d-md-inline-block">
                     <a class="nav-link" href="#">Siêu giảm giá</a>
                 </li>
-                <li class="nav-item me-3 me-lg-0 d-none d-md-inline-block">
+                <li class="nav-item me-lg-0 d-none d-md-inline-block">
                     <a class="nav-link" href="/about">Về chúng tôi</a>
                 </li>
-                <li class="nav-item me-3 me-lg-0 d-none d-md-inline-block">
+                <li class="nav-item me-lg-0 d-none d-md-inline-block">
                     <a class="nav-link" href="#">Liên hệ</a>
                 </li>
             </ul>
