--- a/src/main/resources/templates/admin/role/edit-role.html
+++ b/src/main/resources/templates/admin/role/edit-role.html
@@ -16,7 +16,8 @@
                     <div class="card-header py-3">
                         <h6 class="m-0 font-weight-bold text-primary">Sửa quyền</h6>
                     </div>
-                    <form class="p-4" th:action="@{/admin/edit-role/{roleId}(roleId=${role.roleId})}" method="POST" th:object="${role}">
+                    <form class="p-4" th:action="@{/admin/roles/edit-role/{roleId}(roleId=${role.roleId})}"
+                          method="POST" th:object="${role}">
                         <div>
                             <label class="form-label" for="roleName" style="width:90px">Tên Quyền:</label>
                             <input class="form-control-sm" id="roleName" name="roleName" th:field="*{roleName}" th:value="*{roleName}"/>
@@ -24,7 +25,8 @@
                         </div>
                         <div class="mt-2">
                             <label class="form-label" for="description" style="width:90px">Mô Tả:</label>
-                            <input class="form-control-sm" type="text" id="description" name="description" th:field="*{description}" th:value="*{description}"/>
+                            <input class="form-control-sm" type="text" id="description" name="description"
+                                   th:field="*{description}" th:value="*{description}"/>
                             <span th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="error"></span>
                         </div>
                         <div>
