--- a/src/main/resources/templates/admin/role/list-role.html
+++ b/src/main/resources/templates/admin/role/list-role.html
@@ -16,7 +16,7 @@
                 <div class="card shadow mb-4">
                     <div class="card-header py-3">
                         <h6 class="font-weight-bold text-primary">DataTables Role</h6>
-                        <a class="mt-3" th:href="@{/admin/add-role}">Create role</a>
+                        <a class="mt-3" th:href="@{/admin/roles/add-role}">Create role</a>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
@@ -40,10 +40,12 @@
                                     <td th:text="${role.roleName}"></td>
                                     <td th:text="${role.description}"></td>
                                     <td>
-                                        <a th:href="@{/admin/edit-role/{roleId}(roleId=${role.roleId})}">
+                                        <a th:href="@{/admin/roles/edit-role/{roleId}(roleId=${role.roleId})}">
                                             <i class="fas fa-pen-to-square mr-3"></i></a>
-                                        <a th:href="@{/admin/delete-role/{roleId}(roleId=${role.roleId})}"
-                                           onclick="return confirm('Delete this role?')"><i class="fas fa-times" style="color:red"></i></a>
+                                        <a th:href="@{/admin/roles/delete-role/{roleId}(roleId=${role.roleId})}"
+                                           onclick="return confirm('Delete this role?')">
+                                            <i class="fas fa-times" style="color:red"></i>
+                                        </a>
                                     </td>
                                 </tr>
                                 </tbody>
