--- a/src/main/resources/templates/layout-admin.html
+++ b/src/main/resources/templates/layout-admin.html
@@ -68,7 +68,7 @@
     </div>
 
     <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')">
-        <a class="nav-link" th:href="@{/admin/list-user}">
+        <a class="nav-link" th:href="@{/admin/users}">
             <i class="fas fa-fw fa-users-rectangle"></i>
             <span>Tables User</span></a>
     </li>
