fix login local

--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -72,7 +72,7 @@
                                 <p class="mb-0 fw-bold">Password</p>
                             </div>
                             <div class="col-sm-6">
-                                <p class="mb-0" th:text="*{&quot;*&quot; + ' *'.repeat(user.password.length() / 2)}"></p>
+                                <p class="mb-0">***********</p>
                             </div>
                             <div class="col-sm-3">
                                 <a class="text-decoration-none" th:href="@{/change-password}">Đổi mật khẩu</a>
